--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "crypto-js": "^4.2.0",
     "firebase": "^12.0.0",
     "lucide-react": "^0.539.0",
-    "react": "^19.1.0",
+    "react": "^18.3.1",
     "react-data-table-component": "^7.7.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
@@ -27,6 +27,7 @@
     "react-secure-storage": "^1.3.2",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.11",
     "zod": "^4.0.11"
   },
